# workoutAPI

./: .gitignore  README.md  alembic.ini  main.py  mkdocs.yml  pyproject.toml  requirements.txt  routers.py
alembic/: env.py
alembic/versions/: 762c95ebf9cb_create_tables.py
atleta/: controller.py  models.py  schemas.py
categorias/: controller.py  models.py  schemas.py
centro_treinamento/: controller.py  models.py  schemas.py
configs/: database.py  settings.py
contrib/: __init__.py  schemas.py
