[project]
name = "workoutapi"
version = "0.1.0"
description = "A simple RESTful API developed with FastAPI, SQLAlchemy, and Pydantic for managing workout routines."
authors = [
    {name = "Ennio Gomide",email = "ennio.gomide@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "ruff (>=0.12.8,<0.13.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
]

[tool.poetry]
packages = [{include = "workoutapi", from = "workoutapi"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
lint_fix = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fast_car_api/app.py'
docs = 'mkdocs serve -a 127.0.0.1:8001'
